# Omniscience

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Caddyfile  Dockerfile  LICENSE  Makefile  NOTICE  PROJECT.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
apps/admin/: Dockerfile  index.html  nginx.conf  package.json
apps/admin/src/: App.tsx
apps/admin/src/api/: client.ts
apps/admin/src/components/: ConfirmDialog.tsx  Layout.tsx  LoginScreen.tsx  StatusBadge.tsx  ToastContainer.tsx
apps/admin/src/context/: TokenContext.tsx
apps/admin/src/hooks/: useToast.ts
apps/admin/src/pages/: DashboardPage.tsx  IngestionPage.tsx  SearchPage.tsx  SourcesPage.tsx  TokensPage.tsx
apps/cli/: pyproject.toml
apps/cli/src/omniscience_cli/: __init__.py  client.py  main.py  output.py
apps/cli/src/omniscience_cli/commands/: __init__.py  mcp.py  ops.py  search.py  sources.py  tokens.py
apps/server/: pyproject.toml
apps/server/src/omniscience_server/: __init__.py  __main__.py  app.py  freshness_worker.py  middleware.py
apps/server/src/omniscience_server/ingestion/: __init__.py  events.py  metrics.py  pipeline.py  run_tracker.py  worker.py
apps/server/src/omniscience_server/mcp/: __init__.py  mount.py  server.py  tools.py
apps/server/src/omniscience_server/rest/: __init__.py  delivery_tracker.py  documents.py  errors.py  freshness.py  ingestion_runs.py  rate_limit.py  router.py  search.py  sources.py  webhooks.py
apps/server/src/omniscience_server/routes/: __init__.py  health.py  tokens.py
docs/: architecture.md  freshness-and-lineage.md  roadmap.md  schema.md  vision.md
docs/api/: connector-sdk.md  mcp.md  rest.md
docs/decisions/: 0001-language-and-stack.md  0002-connector-framework-vs-sdk.md  0003-agent-framework-langgraph-primary.md  0004-retrieval-strategy-staged.md
docs/integrations/: claude-code.md  crewai.md  cursor.md  gemini.md  langgraph.md  multiqlti.md  pydantic-ai.md  python-client.md
helm/omniscience/: Chart.yaml  README.md  values.yaml
helm/omniscience/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  pvc.yaml  secret.yaml  service.yaml  serviceaccount.yaml
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: freshness.json
sdks/python/: README.md  pyproject.toml
sdks/python/src/omniscience_client/: __init__.py  client.py  exceptions.py  mcp.py  types.py
sdks/python/tests/: test_client.py
sdks/typescript/: README.md  package-lock.json  package.json  tsconfig.json
sdks/typescript/src/: errors.ts  index.ts  mcp.ts  rest.ts  types.ts
tests/: conftest.py  test_adaptive_retrieval.py  test_agentic_connector.py  test_auth.py  test_chunking.py  test_cli.py  test_config.py  test_connector_sdk.py  test_connectors_v2.py  test_database_connector.py  test_db_schema.py  test_embeddings.py  test_entity_linking.py  test_federation.py  test_freshness.py  test_fs_connector.py  test_git_connector.py  test_health.py  test_index_writer.py  test_infra_parsers.py  test_ingestion.py  test_logging.py  test_mcp.py  test_multi_tenant.py  test_parsers.py  test_queue.py  test_reranker.py  test_rest_api.py  test_retrieval.py  test_symbol_graph.py  test_treesitter.py  test_voyage_cohere.py  test_webhooks.py
tests/connectors/: __init__.py  contract_tests.py
