[project]
name = "omniscience"
version = "0.1.0"
description = "Self-hosted knowledge retrieval service with MCP-first API"
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
    "nats-py>=2.14.0",
]

[tool.uv.workspace]
members = [
    "apps/*",
    "packages/*",
]

[tool.uv.sources]
omniscience-core       = { workspace = true }
omniscience-connectors = { workspace = true }
omniscience-parsers    = { workspace = true }
omniscience-embeddings = { workspace = true }
omniscience-index      = { workspace = true }
omniscience-retrieval  = { workspace = true }
omniscience-server     = { workspace = true }
omniscience-cli        = { workspace = true }

[dependency-groups]
dev = [
    "ruff>=0.4.7",
    "mypy>=1.10.0",
    "pytest>=8.2.2",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "pre-commit>=3.7.1",
    "omniscience-core",
    "omniscience-connectors",
    "omniscience-server",
    "omniscience-embeddings",
    "omniscience-index",
    "tenacity>=9.1.4",
    "respx>=0.23.1",
]

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "S", "T20", "SIM", "TCH", "RUF"]
ignore = [
    "S104",  # Binding to all interfaces — required for containerised services
    "TC001", # Application imports in TYPE_CHECKING blocks — causes issues with pydantic models
    "TC002", # Third-party imports in TYPE_CHECKING blocks — causes runtime issues with starlette
    "TC003", # Stdlib imports in TYPE_CHECKING blocks — we use from __future__ import annotations
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",  # assert is the standard pytest assertion mechanism
    "S105",  # Hardcoded password string — test fixtures use placeholder values
    "S106",  # Hardcoded password in function argument — test fixtures only
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov --cov-report=term-missing"
