[project]
name = "omniscience-cli"
version = "0.1.0"
description = "Omniscience operator CLI"
requires-python = ">=3.12"
dependencies = [
    "omniscience-core",
]

[project.scripts]
omniscience = "omniscience_cli.main:main"

[tool.uv.sources]
omniscience-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/omniscience_cli"]
