[project]
name = "omniscience-cli"
version = "0.1.0"
description = "Omniscience operator CLI"
requires-python = ">=3.12"
dependencies = [
    "omniscience-core",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "httpx>=0.27.0",
]

[project.scripts]
omniscience = "omniscience_cli.main:app"

[tool.uv.sources]
omniscience-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/omniscience_cli"]
