[project]
name = "omniscience-server"
version = "0.1.0"
description = "Omniscience API server (FastAPI + FastMCP)"
requires-python = ">=3.12"
dependencies = [
    "omniscience-core",
    "omniscience-connectors",
    "omniscience-embeddings",
    "omniscience-index",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "mcp>=1.0.0",
]

[tool.uv.sources]
omniscience-core = { workspace = true }
omniscience-connectors = { workspace = true }
omniscience-embeddings = { workspace = true }
omniscience-index = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/omniscience_server"]
